# social-dice-roller

./: .gitignore  Cargo.toml  Dockerfile  README.md
dice-roller/: Cargo.toml
dice-roller/examples/: roll-dice-str.rs  roll-dice.rs  roll-die.rs
dice-roller/src/: lib.rs
migrations/2020-11-08-183155_create_rooms/: up.sql
migrations/2020-11-29-183313_create_players/: up.sql
src/: config.rs  lib.rs  main.rs  schema.rs  tests.rs
src/db/: mod.rs  players.rs  rooms.rs
src/models/: mod.rs  player.rs  room.rs
src/routes/: mod.rs  players.rs  rooms.rs
src/tests/: mod.rs  players.rs  rooms.rs
