[package]
name = "social-dice-roller"
version = "0.1.0"
authors = ["Badr Bouslikhin <bouslikhin.badr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
dice-roller = { path = "dice-roller", version = "0.1.0" }
diesel = { version = "1.4.5", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.8.1"
log = "0.4.11"
names = "0.11.0"
rocket = "0.4.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
parking_lot = "0.11"

[dependencies.rocket_contrib]
version = "0.4.5"
default_features = false
features = ["diesel_sqlite_pool", "json"]
